--- a/src/jReports/ProductosMasVendidos.jrxml
+++ b/src/jReports/ProductosMasVendidos.jrxml
@@ -29,15 +29,15 @@
 	<title>
 		<band height="47" splitType="Stretch">
 			<staticText>
-				<reportElement x="164" y="0" width="234" height="27" uuid="25469227-accf-4334-8ea6-d3741fac885b"/>
+				<reportElement x="0" y="0" width="555" height="27" uuid="25469227-accf-4334-8ea6-d3741fac885b"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Agroservicio Las Palmeras]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="146" y="27" width="266" height="20" uuid="143af52e-8179-4ab9-889d-05eaa43909a7"/>
-				<textElement>
+				<reportElement x="0" y="27" width="555" height="20" uuid="143af52e-8179-4ab9-889d-05eaa43909a7"/>
+				<textElement textAlignment="Center">
 					<font fontName="Arial" size="12"/>
 				</textElement>
 				<text><![CDATA[Reporte de ventas (Productos mas vendidos)]]></text>
@@ -47,48 +47,48 @@
 	<pageHeader>
 		<band height="20" splitType="Stretch">
 			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement x="178" y="0" width="377" height="20" uuid="65ecda35-0289-44fc-9b2d-8b20864374bf"/>
+				<reportElement x="185" y="0" width="370" height="20" uuid="65ecda35-0289-44fc-9b2d-8b20864374bf"/>
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="0" width="178" height="20" uuid="55f5d207-29a6-46b4-b297-078455ea3eb2"/>
+				<reportElement x="0" y="0" width="185" height="20" uuid="55f5d207-29a6-46b4-b297-078455ea3eb2"/>
 				<textElement>
-					<font fontName="Arial" size="12"/>
+					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Productos mas vendidos a fecha:]]></text>
+				<text><![CDATA[Productos mas vendidos hasta:]]></text>
 			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="21">
 			<staticText>
-				<reportElement x="0" y="0" width="255" height="20" uuid="aa114c16-67d0-466e-87ed-8026d11ba8eb"/>
+				<reportElement x="0" y="0" width="230" height="20" uuid="aa114c16-67d0-466e-87ed-8026d11ba8eb"/>
 				<textElement>
-					<font fontName="Arial" size="12"/>
+					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre de Producto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="255" y="0" width="100" height="20" uuid="6b820d0b-9e10-4a43-bfd8-8a4f3fa956fd"/>
+				<reportElement x="230" y="0" width="125" height="20" uuid="6b820d0b-9e10-4a43-bfd8-8a4f3fa956fd"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="12"/>
+					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cantidad Comprada]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="455" y="0" width="100" height="20" uuid="1cb87817-999d-4027-977a-73d0de237238"/>
+				<reportElement x="450" y="0" width="105" height="20" uuid="1cb87817-999d-4027-977a-73d0de237238"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="12"/>
+					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cantidad Vendida]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="355" y="0" width="100" height="20" uuid="ebdafe15-357a-4d3c-aa8b-8e07e1eb4678"/>
+				<reportElement x="355" y="0" width="95" height="20" uuid="ebdafe15-357a-4d3c-aa8b-8e07e1eb4678"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="12"/>
+					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Existencia]]></text>
 			</staticText>
@@ -97,28 +97,28 @@
 	<detail>
 		<band height="21" splitType="Stretch">
 			<textField>
-				<reportElement x="355" y="0" width="100" height="20" uuid="de0e1ffd-852c-440e-891c-481b53430123"/>
+				<reportElement x="355" y="0" width="95" height="20" uuid="de0e1ffd-852c-440e-891c-481b53430123"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Existencia}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="455" y="0" width="100" height="20" uuid="5a0a829d-7ead-4e63-95cf-840a1b57b4c5"/>
+				<reportElement x="450" y="0" width="105" height="20" uuid="5a0a829d-7ead-4e63-95cf-840a1b57b4c5"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Cantidad Vendida}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="255" y="0" width="100" height="20" uuid="d46f2d25-1b3a-407b-9e82-c24b4323da02"/>
+				<reportElement x="230" y="0" width="125" height="20" uuid="d46f2d25-1b3a-407b-9e82-c24b4323da02"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Cantidad Comprada}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="0" width="255" height="20" uuid="935c3e9f-2de0-46ed-a056-17a7b832941b"/>
+				<reportElement x="0" y="0" width="230" height="20" uuid="935c3e9f-2de0-46ed-a056-17a7b832941b"/>
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
