--- a/src/Forms/EntradaxProducto.form
+++ b/src/Forms/EntradaxProducto.form
@@ -569,6 +569,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Eliminar Producto"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btEliminarProductoActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="panelRegistro">
       <Properties>
