--- a/src/jReports/ReporteDiario.jrxml
+++ b/src/jReports/ReporteDiario.jrxml
@@ -3,6 +3,30 @@
 	<property name="ireport.zoom" value="1.6105100000000008"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<parameter name="Fecha1" class="java.lang.String">
+		<defaultValueExpression><![CDATA["2000-01-01"]]></defaultValueExpression>
+	</parameter>
+	<parameter name="Fecha2" class="java.lang.String">
+		<defaultValueExpression><![CDATA["2019-01-01"]]></defaultValueExpression>
+	</parameter>
+	<queryString>
+		<![CDATA[Select v.idventa,CONCAT(c.Nombre ," ", c.Apellido) AS 'Nombre del Cliente ', TIME(v.Fecha) AS Hora, SUM(p.Precio * dv.Cantidad) AS Total from cliente c 
+	inner join venta v on c.idcliente=v.idcliente 
+	inner join detalleventa dv on v.idventa=dv.idventa 
+	inner join producto p on dv.idproducto=p.idproducto 
+    join detallecompra dc on p.idProducto = dc.idProducto 
+    where v.fecha between $P{Fecha1} and $P{Fecha2}
+group by v.idventa, p.idProducto, v.Fecha;]]>
+	</queryString>
+	<field name="idventa" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="Nombre del Cliente " class="java.lang.String"/>
+	<field name="Hora" class="java.sql.Time"/>
+	<field name="Total" class="java.lang.Double"/>
+	<variable name="Total_1" class="java.lang.Double" resetType="Column" calculation="Sum">
+		<variableExpression><![CDATA[$F{Total}]]></variableExpression>
+	</variable>
 	<title>
 		<band height="46" splitType="Stretch">
 			<staticText>
@@ -22,11 +46,81 @@
 		</band>
 	</title>
 	<columnHeader>
-		<band height="23" splitType="Stretch"/>
+		<band height="20" splitType="Stretch">
+			<staticText>
+				<reportElement x="100" y="0" width="297" height="20" uuid="f793fdb9-a2ce-4b8e-80b2-28a2ece7a533"/>
+				<textElement>
+					<font fontName="Arial" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Nombre del Cliente ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="397" y="0" width="100" height="20" uuid="dd512f17-349a-4cec-9580-3c7d9b3a2bac"/>
+				<textElement>
+					<font fontName="Arial" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Hora]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="497" y="0" width="58" height="20" uuid="beaec813-19c1-4d48-aa76-190425bed8bd"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="0" width="100" height="20" uuid="2cb6483f-252f-40f2-9d2e-ffb158f8a23a"/>
+				<textElement>
+					<font fontName="Arial" size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[# de Factura]]></text>
+			</staticText>
+		</band>
 	</columnHeader>
 	<detail>
-		<band height="24" splitType="Stretch"/>
+		<band height="20" splitType="Stretch">
+			<textField>
+				<reportElement x="100" y="0" width="297" height="20" uuid="dfc8e45d-9e91-43c3-9d0e-e42e1e690dc8"/>
+				<textElement>
+					<font fontName="Arial" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{Nombre del Cliente }]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="397" y="0" width="100" height="20" uuid="e2dbfb52-3829-4dbe-9465-288e6977f4db"/>
+				<textElement>
+					<font fontName="Arial" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[(new SimpleDateFormat("HH:mm a").format($F{Hora}))]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="497" y="0" width="58" height="20" uuid="a81dc7ee-75ad-4aa9-a1f8-af0c693f2591"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{Total}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="0" width="100" height="20" uuid="a4c0491e-cf9e-478f-a9ee-6240d59c37a4"/>
+				<textElement>
+					<font fontName="Arial" size="12" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[(new DecimalFormat("00000000").format($F{idventa}))]]></textFieldExpression>
+			</textField>
+		</band>
 	</detail>
+	<columnFooter>
+		<band height="21">
+			<textField pattern="" isBlankWhenNull="false">
+				<reportElement mode="Transparent" x="485" y="0" width="70" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="f064bd0e-b678-430f-961e-697356cda272"/>
+				<textElement textAlignment="Right" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Arial" size="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<textFieldExpression><![CDATA[(new DecimalFormat("000.00").Format($V{Total_1}))]]></textFieldExpression>
+			</textField>
+		</band>
+	</columnFooter>
 	<pageFooter>
 		<band height="20">
 			<textField>
@@ -44,12 +138,19 @@
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="0" width="97" height="20" uuid="2ab8ebc4-eb31-4041-849f-35bb647ad7ad"/>
+				<reportElement x="0" y="0" width="100" height="20" uuid="2ab8ebc4-eb31-4041-849f-35bb647ad7ad"/>
 				<textElement>
 					<font fontName="Arial" size="12"/>
 				</textElement>
 				<text><![CDATA[Reporte Del Dia:]]></text>
 			</staticText>
+			<textField pattern="EEEEE dd MMMMM yyyy">
+				<reportElement x="100" y="0" width="333" height="20" uuid="2fc667be-106a-4f5f-98b7-556517f05ab8"/>
+				<textElement>
+					<font fontName="Arial" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageFooter>
 </jasperReport>
